# gstreamer-plugin-vpu

./: README.md  install.sh  meson.build  runDemo.sh  runLaunch.sh  uninstall.sh
gst-app/: meson.build
gst-app/ams/: ams_demo.c  meson.build
gst-app/demo/: meson.build
gst-plugin/: meson.build
gst-plugin/ams/: amscodec.pc  gstamsdec.c  gstamsdec.h  gstamselements.h  gstamsenc.c  gstamsenc.h  gstamsh264dec.c  gstamsh264dec.h  gstamsh264enc.c  gstamsh264enc.h  gstamsh265dec.c  gstamsh265dec.h  gstamsh265enc.c  gstamsh265enc.h  meson.build  plugin.c
gst-plugin/demo/: meson.build
